# Cest

./: .clang-tidy  .gitignore  AUTHORS  CMakeLists.txt  CMakePresets.json  README.md  ROADMAP.md  cmakelists.txt  vcpkg.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/rulesets/: protect-main.json
.github/workflows/: ci.yml
cmake/: CestConfig.cmake.in  CestConfigVersionBuildTypeReq.cmake.in  CestPackageConfigHelpers.cmake
cmake/CommonModules/: CestCommon.cmake  CestCommun.cmake  CestFeatureOptions.cmake  CestHelpers.cmake  CestMsvcParallel.cmake  CestResourceAndManifest.cmake  CestToolchainRequirement.cmake  CsDebug.cmake
cmake/Modules/: CestDeployment.cmake  CestInitDefaultVariables.cmake  CestOptions.cmake  CestSources.cmake  GeneratePkgConfig.cmake
cmake/Modules/GeneratePkgConfig/: generate-pkg-config.cmake.in  pkg-config.cmake.in  target-compile-settings.cmake.in
cmake/vcpkg/: usage.in
cmake/vcpkg/ports/cest/: portfile.cmake  vcpkg.json
examples/: 01_basic_matcher.cpp  02_mock_functions_basics.cpp  03_basic_matcher_skip.cpp  CMakeLists.txt  example.cpp
include/: cest.hpp  mocks.hpp  version.hpp
include/cest/: core.hpp  hot_patch.hpp  mock.hpp  type_traits.hpp  types.hpp
include/cest/macros/: attributes.hpp  common_namespace.hpp  compiler_detect.hpp  export.hpp  export_common.hpp  stringify.hpp  system_header.hpp
include/cest/mocks/: hot_patch.hpp  hot_patch_method.hpp  mock.hpp
include/cest/reporters/: console_reporter.hpp  i_reporter.hpp
include/cest/utils/: colors.hpp  math.hpp  suite.hpp  test_case.hpp
resources/: Cest.dll.manifest  Cest.rc.in
tests/: CMakeLists.txt  main.cpp  test_core.cpp  test_custom.cpp  test_focus.cpp  test_hotpatch.cpp  test_mock.cpp  test_strict_hotpatch.cpp
